crates/solidity/testing/snapshots/bindings_output/modifiers/virtual_modifier/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │     modifier foo virtual { _; }
   │                  ───────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
   ╭─[input.sol:6:18]
   │
 6 │ ╭─▶     modifier foo override(Base) { _; }
 7 │ ├─▶     function test() public foo {}
   │ │                                       
   │ ╰─────────────────────────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── def: 1
   │ 
 5 │ contract Test is Base {
   │          ──┬─    ──┬─  
   │            ╰─────────── def: 2
   │                    │   
   │                    ╰─── ref: 1
───╯
